# CVM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  temp.cpp
cmake/libs/: Libbacktrace.cmake
cmake/modules/: Logging.cmake
docs/: API使用.md  Design.md  RelyIR.md  Runtime.md  UML.uxf  code_point.md  cvm.uxf  cython.uxf  ir.uxf  object.uxf  tvm.uxf  values.uxf  编译.md
include/cvm/ir/: attrs.h  expr.h
include/cvm/node/: container.h  functor.h  node.h  reflection.h  repr_printer.h  structural_equal.h  structural_hash.h
include/cvm/runtime/: c_backend_api.h  c_runtime_api.h  container.h  data_type.h  logging.h  memory.h  memory_manager.h  module.h  ndarray.h  object.h  packed_func.h  registry.h  thread_local.h
include/cvm/runtime/crt/: platform.h
include/cvm/runtime/vm/: bytecode.h
include/cvm/support/: logging.h
include/cvt/node/: container.h
include/cvt/runtime/: c_runtime_api.h  container.h  memory.h  object.h  packed_func.h  registry.h
include/cvt/support/: logging.h
python/: gen_requirements.py  setup.py  temp.py
python/cvm/: __init__.py  error.py
python/cvm/_ffi/: __init__.py  base.py  libinfo.py  registry.py  runtime_ctypes.py  temp.py
python/cvm/_ffi/_ctypes/: ndarray.py
python/cvm/_ffi/_cython/: base.pxi  core.pyx  ndarray.pxi  object.pxi  packed_func.pxi
python/cvm/driver/cvmc/: main.py
python/cvm/runtime/: __init__.py  _ffi_api.py  ndarray.py  object.py  packed_func.py
python/tests/: test_runtime_packed_func.py
src/node/: container.cc  reflection.cc  repr_printer.cc  structural_equal.cc  structural_hash.cc
src/runtime/: c_runtime_api.cc  container.cc  logging.cc  memory_manager.cc  ndarray.cc  object.cc  object_internal.h  registry.cc  runtime_base.h
tests/: test_string.cc
tests/cpp/: container_test.cc  data_type_test.cc  object_protocol_test.cc  test_string.cc  thread_local_test.cc
(+4 files in other folders)
